--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,33 +1,26 @@
 name: Sign Decompiled APK
 
 on:
-  # push:
-  #   paths:
-  #     - '**'  # Trigger on any file changes
   workflow_dispatch:
     inputs:
       config_b64:
         description: 'Base64-encoded config.json'
         required: true
 
-
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-      # 1. Checkout code
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      # 2. Setup Java
       - name: Setup Java
         uses: actions/setup-java@v3
         with:
           distribution: temurin
           java-version: 17
 
-      # 3. Install apktool, zipalign, apksigner
       - name: Install apktool and tools
         run: |
           sudo apt-get update
@@ -37,30 +30,23 @@ jobs:
           chmod +x apktool
           sudo mv apktool apktool.jar /usr/local/bin/
 
-      # 4. Inject config.json from inline base64
       - name: Inject config.json
         run: |
           mkdir -p assets/flutter_assets/assets
           echo "${{ github.event.inputs.config_b64 }}" | base64 -d > assets/flutter_assets/assets/config.json
 
-
-
-      # 5. Rebuild APK
       - name: Rebuild APK
         run: |
           apktool b . -o unsigned.apk
 
-      # 6. Zipalign
       - name: Zipalign APK
         run: |
           zipalign -p -f 4 unsigned.apk aligned.apk
 
-      # 7. Decode Keystore from base64 secret
       - name: Decode Keystore
         run: |
           echo "${{ secrets.KEYSTORE_B64 }}" | base64 -d > appvly.jks
 
-      # 8. Sign APK using provided secrets
       - name: Sign APK
         run: |
           apksigner sign \
@@ -71,13 +57,17 @@ jobs:
             --out final.apk \
             aligned.apk
 
-      # 9. Verify signature
       - name: Verify APK Signature
         run: |
           apksigner verify final.apk
 
-      # 10. Upload signed APK
-      - name: Upload Final APK
+      - name: Upload APK to PHP Server
+        run: |
+          curl -X POST https://letmedebug.rabi.info.np/upload.php \
+            -F "file=@final.apk" \
+            -F "token=${{ secrets.UPLOAD_TOKEN }}"
+
+      - name: Upload to GitHub Artifact (optional backup)
         uses: actions/upload-artifact@v4
         with:
           name: signed_appvly_apk
