--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,21 +24,40 @@ jobs:
       - name: Install apktool and tools
         run: |
           sudo apt-get update
-          sudo apt-get install -y wget zipalign apksigner jq
+          sudo apt-get install -y wget zipalign apksigner jq xmlstarlet
           wget https://raw.githubusercontent.com/iBotPeaches/Apktool/master/scripts/linux/apktool -O apktool
           wget https://bitbucket.org/iBotPeaches/apktool/downloads/apktool_2.9.3.jar -O apktool.jar
           chmod +x apktool
           sudo mv apktool apktool.jar /usr/local/bin/
 
-      - name: Inject and extract appID from config.json
+      - name: Inject config.json and extract values
         id: config
         run: |
           mkdir -p assets/flutter_assets/assets
           echo "${{ github.event.inputs.config_b64 }}" | base64 -d > assets/flutter_assets/assets/config.json
           
-          # Extract appID
-          app_id=$(jq '.appID' assets/flutter_assets/assets/config.json)
+          # Extract values using jq
+          app_id=$(jq -r '.appID' assets/flutter_assets/assets/config.json)
+          app_title=$(jq -r '.appTitle' assets/flutter_assets/assets/config.json)
+
           echo "APP_ID=$app_id" >> $GITHUB_ENV
+          echo "APP_TITLE=$app_title" >> $GITHUB_ENV
+          
+          echo "Extracted appID: $app_id"
+          echo "Extracted appTitle: $app_title"
+
+      - name: Modify app name in AndroidManifest.xml
+        run: |
+          if [ -f AndroidManifest.xml ]; then
+            echo "Modifying AndroidManifest.xml..."
+            xmlstarlet ed --inplace \
+              -N android="http://schemas.android.com/apk/res/android" \
+              -u "/manifest/application/@android:label" \
+              -v "$APP_TITLE" AndroidManifest.xml
+          else
+            echo "AndroidManifest.xml not found!"
+            exit 1
+          fi
 
       - name: Rebuild APK
         run: |
